fix:set overflow-y: overlay

--- a/src/plugin/nodeMenu.less
+++ b/src/plugin/nodeMenu.less
@@ -90,7 +90,7 @@ nmenu {
         display: flex;
         flex-wrap: wrap;
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: overlay;
         // height: 270px;
         box-sizing: border-box;
         margin: 8px 4px;
